[tool.poetry]
name = "gap-statistic"
version = "0.1.0"
description = ""
authors = ["Moritz Helm <mohelm84@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^0.25.3"
sklearn = "^0.0"
matplotlib = "^3.1.2"
seaborn = "^0.10.0"

[tool.poetry.dev-dependencies]
mypy = "^0.761"
ipdb = "^0.12.3"
ipython = "^7.11.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
